--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nama kamu Portfolio</title>
+    <title>HangzStore</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -32,7 +32,7 @@
             <div class="profile-circle">
                 <img src="https://files.catbox.moe/xbjs7a.webp" alt="Developer Profile" id="profile-img">
             </div>
-            <h1 class="developer-name">Nama Kamu</h1>
+            <h1 class="developer-name">HangzStore</h1>
             <p class="developer-title">Full Stuck Developer</p>
         </div>
     </section>
@@ -40,10 +40,10 @@
     <section class="about" id="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
-            <p class="about-text">
-                I am a passionate full-stack developer with 5 years of experience creating innovative web solutions. 
-                I love turning complex problems into simple, beautiful designs. My mission is to create digital 
-                experiences that make a difference in people's lives.
+            <p class="about-text">Hadir seperti bayangan di bawah cahaya bulan.
+Menyukai hal-hal yang sunyi, namun penuh cerita yang tak terucap.
+🎧 Nada sendu, lirik yang menggema di kepala.
+💬 "Ada kalanya aku menjauh, bukan karena benci… tapi karena terlalu kagum."
             </p>
             <div class="skills">
                 <h3>Programming Languages & Technologies</h3>
@@ -192,7 +192,7 @@
                     </div>
                     <h3>WhatsApp</h3>
                     <p>Let's chat on WhatsApp</p>
-                    <a href="https://wa.me/1234567890" target="_blank" class="contact-btn">
+                    <a href="https://wa.me/6285866435726" target="_blank" class="contact-btn">
                         Message Me
                     </a>
                 </div>
@@ -203,7 +203,7 @@
                     </div>
                     <h3>Telegram</h3>
                     <p>Connect with me on Telegram</p>
-                    <a href="https://t.me/yourusername" target="_blank" class="contact-btn">
+                    <a href="https://t.me/cswhatsapp" target="_blank" class="contact-btn">
                         Chat Now
                     </a>
                 </div>
@@ -215,7 +215,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-left">
-                    <h3>Nama Kamu</h3>
+                    <h3>HangzStore</h3>
                     <p>Full Stuck Developer</p>
                 </div>
                 <div class="footer-center">
