--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +12,7 @@
     
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">NamaKamu </div>
+            <div class="nav-logo">HangzStore </div>
             <div class="nav-controls">
                 <button id="theme-toggle" class="theme-btn">
                     <i class="fas fa-moon"></i>
@@ -30,7 +29,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="profile-circle">
-                <img src="https://files.catbox.moe/xbjs7a.webp" alt="Developer Profile" id="profile-img">
+                <img src="https://files.catbox.moe/dukt44.webp" alt="Developer Profile" id="profile-img">
             </div>
             <h1 class="developer-name">HangzStore</h1>
             <p class="developer-title">Full Stuck Developer</p>
@@ -227,7 +226,7 @@ Menyukai hal-hal yang sunyi, namun penuh cerita yang tak terucap.
                     </div>
                 </div>
                 <div class="footer-right">
-                    <p>&copy; 2025 NamaKamu. All rights reserved.</p>
+                    <p>&copy; 2025 HangzStore. All rights reserved.</p>
                 </div>
             </div>
         </div>
