--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Menyukai hal-hal yang sunyi, namun penuh cerita yang tak terucap.
     </footer>
 
     <audio id="background-music" loop>
-        <source src="https://www.soundjay.com/misc/sounds/bell-ringing-05.wav" type="audio/mpeg">
+        <source src="https://files.catbox.moe/9p0meh.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
